--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>New York Connect Roundcube Webmail :: Welcome to New York Connect Roundcube Webmail</title>
+    <title>AP&amp;T WebMail :: Welcome to AP&amp;T WebMail</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
