--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicontwo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content=""
+      content="IgLou Webmail :: Welcome to IgLou Webmail"
     />
     
     <!--
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tranquility Webmail :: Welcome to Tranquility Webmail</title>
+    <title>IgLou Webmail :: Welcome to IgLou Webmail</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
